# orrery

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Session.vim  fragment_design.md  seq.fil  specification.md  test.fil
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
crates/filament/: Cargo.toml  README.md
crates/filament-cli/: Cargo.toml  README.md
crates/filament-cli/src/: args.rs  config.rs  error_adapter.rs  lib.rs  main.rs
crates/filament-cli/tests/: e2e_smoke_test.rs
crates/filament-core/: Cargo.toml  README.md
crates/filament-core/src/: color.rs  draw.rs  geometry.rs  identifier.rs  lib.rs
crates/filament-core/src/draw/: arrow.rs  arrow_with_text.rs  layer.rs  lifeline.rs  note.rs  shape.rs  shape_with_text.rs  stroke.rs  text.rs  text_positioning.rs
crates/filament-core/src/draw/shape/: boundary.rs  component.rs  control.rs  entity.rs  interface.rs  oval.rs
crates/filament-core/src/semantic/: diagram.rs  element.rs
crates/filament-parser/: Cargo.toml  README.md
crates/filament-parser/src/: builtin_types.rs  desugar.rs  elaborate.rs  elaborate_utils.rs  error.rs  lexer.rs  lib.rs  parser.rs  parser_tests.rs  parser_types.rs  span.rs  tokens.rs  validate.rs
crates/filament-parser/src/error/: collector.rs  diagnostic.rs  error_code.rs  label.rs
crates/filament-parser/tests/: parse.rs
crates/filament/examples/: from_semantic.rs  from_source.rs
crates/filament/src/: ast.rs  color.rs  config.rs  draw.rs  error.rs  export.rs  identifier.rs  layout.rs  lib.rs  semantic.rs  structure.rs
crates/filament/src/ast/: builtin_types.rs  desugar.rs  elaborate.rs  elaborate_types.rs  elaborate_utils.rs  lexer.rs  parser.rs  parser_tests.rs  parser_types.rs  span.rs  validate.rs
crates/filament/src/draw/: activation_box.rs  arrow.rs  arrow_with_text.rs  fragment.rs  layer.rs  lifeline.rs  note.rs  positioned.rs  shape.rs  text.rs
crates/filament/src/draw/shape/: actor.rs  component.rs  control.rs  interface.rs  oval.rs  rectangle.rs
crates/filament/src/error/: diagnostic.rs
crates/filament/src/export/: svg.rs
crates/filament/src/export/svg/: component.rs  layer.rs  sequence.rs
crates/filament/src/layout/: component.rs  engines.rs  layer.rs  positioning.rs  sequence.rs
crates/filament/src/layout/engines/: basic.rs
crates/filament/src/layout/engines/basic/: component.rs  sequence.rs
crates/filament/src/layout/engines/sugiyama/: component.rs
crates/filament/src/semantic/: diagram.rs  element.rs
crates/filament/src/structure/: component.rs  graph_base.rs  sequence.rs
crates/filament/tests/: builder_api_test.rs
crates/orrery/: Cargo.toml  README.md
crates/orrery-cli/: Cargo.toml  README.md
crates/orrery-core/: Cargo.toml  README.md
crates/orrery-core/src/: color.rs  draw.rs  geometry.rs  identifier.rs  interner.rs  lib.rs  semantic.rs
crates/orrery-core/src/draw/: activation_box.rs  arrow.rs  arrow_with_text.rs  diagram.rs  fragment.rs  layer.rs  lifeline.rs  note.rs  positioned.rs  shape.rs  shape_with_text.rs  stroke.rs  text.rs
crates/orrery-core/src/draw/shape/: actor.rs  component.rs  interface.rs  rectangle.rs
crates/orrery-core/src/semantic/: diagram.rs  element.rs
crates/orrery-parser/: Cargo.toml  README.md
crates/orrery-parser/src/: builtin_types.rs  desugar.rs  elaborate.rs  elaborate_utils.rs  error.rs  file_id.rs  lexer.rs  lib.rs  parser.rs  parser_tests.rs  parser_types.rs  resolver.rs  source_map.rs  source_provider.rs  span.rs  tokens.rs  validate.rs
crates/orrery-parser/src/error/: collector.rs  diagnostic.rs  error_code.rs  label.rs  parse_error.rs  severity.rs  source_error.rs
crates/orrery-parser/tests/: parse.rs
docs/: roadmap.md
docs/architecture/: documentation-guidelines.md  documentation_guidelines.md  error_messages.md  examples.md  structure_module.md
docs/specifications/: error_handling.md  import_system.md  literal_values.md  note_syntax.md  specification.md  type_system.md
examples/: README.md  activate_blocks.orr  activate_blocks_simple.orr  activate_explicit.orr  activate_mixed.orr  arrow_styles.fil  arrow_styles.orr  boundary_example.fil  boundary_example.orr  component_basic.orr  component_labels.fil  component_layout_engines.orr  component_nesting.orr  component_shapes.orr  cross_level_relations.fil  cross_level_relations.orr  elaboration_errors.fil  embedded_diagram.fil  embedded_diagram.orr  embedded_diagrams.orr  error_example.fil  float_test.fil  float_test.orr  fragment_authentication_flow.fil  fragment_minimal.orr  imports.orr  multi_level_nested.fil  multi_level_nested.orr  nested_component.fil  nested_engines_example.fil  note_alignment.orr  note_comprehensive.orr  note_edge_cases.fil  note_spanning_multiple.orr  sequence_activation.orr  sequence_basic.orr  sequence_fragments.orr  sequence_notes.orr  shape_comparison.fil  shape_comparison.orr  (+14 more)
examples/error/: README.md  error_example.fil  missing_colon_component.fil  missing_semicolon_component.fil  missing_semicolon_type.fil
examples/errors/: README.md  activation_in_component_diagram_block.orr  activation_in_component_diagram_explicit.orr  bracket_only.fil  complex_nested.orr  deactivate_without_activate.fil  elab_activation_in_component.orr  elab_content_in_content_free_shape.orr  elab_duplicate_type.orr  elab_fragment_in_component.orr  elab_invalid_attribute_value.orr  elab_type_mismatch.orr  elab_type_override.orr  elab_undefined_type.orr  elab_unknown_attribute.orr  elaboration_errors.fil  error_example.fil  fragment_in_component_diagram.orr  invalid_diagram_header.orr  keyword_typo.fil  lexer_empty_unicode_escape.orr  lexer_invalid_escape.orr  lexer_invalid_unicode_codepoint.orr  lexer_invalid_unicode_escape.orr  lexer_unexpected_character.orr  lexer_unterminated_string.orr  missing_bracket.fil  parse_keyword_typo.orr  (+17 more)
filament/: CHANGELOG.md  config.toml
orrery/: CHANGELOG.md  config.toml
src/: ast.rs  color.rs  config.rs  draw.rs  error.rs  export.rs  geometry.rs  graph.rs  identifier.rs  layout.rs  lib.rs  main.rs  shape.rs  structure.rs
tests/: e2e_smoke_test.rs
(+105 files in other folders)
