[workspace]
members = [
    "crates/orrery",
    "crates/orrery-cli",
    "crates/orrery-core",
    "crates/orrery-parser",
]
default-members = ["crates/orrery-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
authors = ["Foad Nosrati Habibi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orreryworks/orrery"
homepage = "https://github.com/orreryworks/orrery"
documentation = "https://docs.rs/orrery"

[workspace.dependencies]
orrery = { version = "0.1.0", path = "crates/orrery" }
orrery-core = { version = "0.1.0", path = "crates/orrery-core" }
orrery-parser = { version = "0.1.0", path = "crates/orrery-parser" }
