[workspace]
members = [
    "crates/orrery",
    "crates/orrery-cli",
    "crates/orrery-core",
    "crates/orrery-parser",
]
default-members = ["crates/orrery-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Foad Nosrati Habibi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orreryworks/orrery"
homepage = "https://github.com/orreryworks/orrery"
documentation = "https://docs.rs/orrery"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
consolidate-commits = true
pre-release-commit-message = "release: v{{version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: (https://github.com/.+/compare/)(.+)\\.\\.\\.HEAD", replace = "[Unreleased]: ${1}v{{version}}...HEAD\n[{{version}}]: ${1}${2}...v{{version}}", exactly = 1 },
]

[workspace.dependencies]
orrery = { version = "0.1.0", path = "crates/orrery" }
orrery-core = { version = "0.1.0", path = "crates/orrery-core" }
orrery-parser = { version = "0.1.0", path = "crates/orrery-parser" }
