[workspace]
members = [
    "crates/orrery",
    "crates/orrery-cli",
    "crates/orrery-core",
    "crates/orrery-parser",
]
default-members = ["crates/orrery-cli"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
authors = ["Foad Nosrati Habibi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orreryworks/orrery"
homepage = "https://orreryworks.github.io/"
documentation = "https://docs.rs/orrery"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
consolidate-commits = true
pre-release-commit-message = "release: v{{version}}"

[workspace.dependencies]
orrery = { version = "0.1.1", path = "crates/orrery" }
orrery-core = { version = "0.1.1", path = "crates/orrery-core" }
orrery-parser = { version = "0.1.1", path = "crates/orrery-parser" }
