[package]
name = "filament-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for the Filament diagram language"
keywords = ["diagram", "uml", "visualization", "cli", "architecture"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"

[lib]
name = "filament_cli"
path = "src/lib.rs"

[[bin]]
name = "filament"
path = "src/main.rs"

[dependencies]
filament.workspace = true
filament-parser.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.29", features = ["kv", "kv_std"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
toml = "0.9.10"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.23.0"
