[package]
name = "filament-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and definitions for Filament diagrams"
keywords = ["diagram", "uml", "visualization"]
categories = ["visualization"]

[lib]
name = "filament_core"
path = "src/lib.rs"

[dependencies]
string-interner = "0.19.0"
color = "0.3.2"
svg = "0.18.0"
thiserror = "2.0.17"
cosmic-text = "0.15.0"
log = { version = "0.4.29", features = ["kv", "kv_std"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.10"
