[package]
name = "filament"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "A diagram language for creating component and sequence diagrams"
keywords = ["diagram", "uml", "visualization", "dsl"]
categories = ["visualization", "parser-implementations"]

[lib]
name = "filament"
path = "src/lib.rs"

[dependencies]
filament-core = { workspace = true }
filament-parser = { workspace = true }
color = "0.3.2"
indexmap = "2.12"
layout-rs = "0.1.3"
log = { version = "0.4.29", features = ["kv", "kv_std"] }
thiserror = "2.0.17"
petgraph = "0.8.3"
svg = "0.18.0"
cosmic-text = "0.15.0"
rand = "0.9.2"
rust-sugiyama = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.23.0"

[dev-dependencies]
