[package]
name = "orrery-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Core types and definitions for Orrery diagrams"
keywords = ["diagram", "uml", "visualization"]
categories = ["visualization"]

[lib]
name = "orrery_core"
path = "src/lib.rs"

[dependencies]
string-interner = "0.19.0"
color = "0.3.2"
svg = "0.18.0"
thiserror = "2.0.18"
cosmic-text = "0.17.0"
log = { version = "0.4.29", features = ["kv", "kv_std"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.10"
proptest = "1.11"

[package.metadata.release]
pre-release-replacements = [
    { file = "../../CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "\\[Unreleased\\]: (https://github.com/.+/compare/)(.+)\\.\\.\\.HEAD", replace = "[Unreleased]: ${1}v{{version}}...HEAD\n[{{version}}]: ${1}${2}...v{{version}}", exactly = 1 },
]
