[package]
name = "orrery-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Parser for the Orrery diagram language"
keywords = ["diagram", "parser", "ast"]
categories = ["parsing"]

[lib]
name = "orrery_parser"
path = "src/lib.rs"

[dependencies]
orrery-core.workspace = true
bumpalo = "3.20.2"
indexmap = "2.14"
winnow = "1.0.2"
log = { version = "0.4.29", features = ["kv", "kv_std"] }
thiserror = "2.0.18"

[dev-dependencies]
proptest = "1.11"
